Take into account the safe area in infobars.

This CL:
-Adds a compatibility header to obtain a view's
safeAreaInsets.
-Take into account the safeAreaInsets where needed in the infobar view.
-Removes the unnecessary |imageViewContainer_| from the infobar view.

https://drive.google.com/open?id=0Bw-kA2pwDsU-OXlJSUE3VmxMZGc

Bug: 765415
Change-Id: I35c1718ca170ccef245f51f28fa7eed63f1d9042